--- a/EDA_&_Price_Prediction_of_Laptops.ipynb
+++ b/EDA_&_Price_Prediction_of_Laptops.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGex5U6DN42c9KhUYDwULr",
+      "authorship_tag": "ABX9TyOonpRXugQlDt56Ygi6O79G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1635,61 +1635,60 @@
     {
       "cell_type": "code",
       "source": [
-        "for idx, val in enumerate(df1[0].str.split()):\n",
-        "  print(idx , val[1])\n",
-        "  break"
+        "df1[0].unique()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3dawb0UW6de5",
-        "outputId": "b3cf4b6f-4199-47b4-b05e-6e33e3999cbe"
+        "outputId": "4a18025a-4720-4133-d55e-342b5f8d8291"
       },
-      "execution_count": 41,
+      "execution_count": 51,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0 SSD\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['128 SSD', '128 Flash Storage', '256 SSD', '512 SSD', '500 HDD',\n",
+              "       '256 Flash Storage', '1000 HDD', '32 Flash Storage', '128 SSD ',\n",
+              "       '256 SSD ', '64 Flash Storage', '32 SSD', '2000 HDD', '64 SSD',\n",
+              "       '1000 Hybrid', '512 SSD ', '1000 SSD', '16 SSD',\n",
+              "       '16 Flash Storage', '64 Flash Storage ', '180 SSD', '1000 HDD ',\n",
+              "       '32 HDD', '1000 SSD ', '512 Flash Storage', '128 HDD', '240 SSD',\n",
+              "       '8 SSD', '508 Hybrid'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "for idx, val in enumerate(df1[0].str.split()):\n",
-        "  val ="
+        "def disk(val):\n",
+        "  df['Dick'+val] = df1[0].apply(lambda x:1 if val in x else 0)\n",
+        "\n",
+        "value = ['SSD', 'HDD', 'Flash Storage', 'Hybrid']\n",
+        "for val in value:\n",
+        "  disk(val)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 131
-        },
-        "id": "MxtrdtRP4S7Z",
-        "outputId": "1267c8e8-e548-4172-cba7-b681f6b1316e"
+        "id": "MxtrdtRP4S7Z"
       },
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-42-dcddb47bcfc6>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    df1.loc[idx, '0'] =\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "execution_count": 53,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#df['Memory'] = df['Memory'].str.replace('\\d+','',regex = True)"
+      ],
       "metadata": {
         "id": "IU4jB--G3Dgn"
       },
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -1703,32 +1702,32 @@
           "height": 206
         },
         "id": "r8-nDuQyJcNi",
-        "outputId": "ffe48658-0e1c-42cc-efdd-eee7140152d0"
+        "outputId": "88594e11-9894-4b2f-d937-fc1a8dad8ff9"
       },
-      "execution_count": 43,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   Company  TypeName  Inches  Cpu  Ram             Memory  Gpu  OpSys  Weight  \\\n",
-              "0        1         4    13.3   33    8            128 SSD    2      0    1.37   \n",
-              "1        1         4    13.3   33    8  128 Flash Storage    2      0    1.34   \n",
-              "2        7         3    15.6   33    8            256 SSD    2      1    1.86   \n",
-              "3        1         4    15.4   34   16            512 SSD    0      0    1.83   \n",
-              "4        1         4    13.3   33    8            256 SSD    2      0    1.37   \n",
+              "   Company  TypeName  Inches  Cpu  Ram          Memory  Gpu  OpSys  Weight  \\\n",
+              "0        1         4    13.3   33    8             SSD    2      0    1.37   \n",
+              "1        1         4    13.3   33    8   Flash Storage    2      0    1.34   \n",
+              "2        7         3    15.6   33    8             SSD    2      1    1.86   \n",
+              "3        1         4    15.4   34   16             SSD    0      0    1.83   \n",
+              "4        1         4    13.3   33    8             SSD    2      0    1.37   \n",
               "\n",
-              "       Price  Width  Length  \n",
-              "0  11.175755   2560    1600  \n",
-              "1  10.776777   1440     900  \n",
-              "2  10.329931   1920    1080  \n",
-              "3  11.814476   2880    1800  \n",
-              "4  11.473101   2560    1600  "
+              "       Price  Width  Length  DickSSD  DickHDD  DickFlash Storage  DickHybrid  \n",
+              "0  11.175755   2560    1600        1        0                  0           0  \n",
+              "1  10.776777   1440     900        0        0                  1           0  \n",
+              "2  10.329931   1920    1080        1        0                  0           0  \n",
+              "3  11.814476   2880    1800        1        0                  0           0  \n",
+              "4  11.473101   2560    1600        1        0                  0           0  "
             ],
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-25afad34-b612-48d7-b1d6-58effb677628\">\n",
+              "  <div id=\"df-e74e4f1c-bd6e-4624-a5d2-a789bf01f283\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1760,6 +1759,10 @@
               "      <th>Price</th>\n",
               "      <th>Width</th>\n",
               "      <th>Length</th>\n",
+              "      <th>DickSSD</th>\n",
+              "      <th>DickHDD</th>\n",
+              "      <th>DickFlash Storage</th>\n",
+              "      <th>DickHybrid</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -1770,13 +1773,17 @@
               "      <td>13.3</td>\n",
               "      <td>33</td>\n",
               "      <td>8</td>\n",
-              "      <td>128 SSD</td>\n",
+              "      <td>SSD</td>\n",
               "      <td>2</td>\n",
               "      <td>0</td>\n",
               "      <td>1.37</td>\n",
               "      <td>11.175755</td>\n",
               "      <td>2560</td>\n",
               "      <td>1600</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -1785,13 +1792,17 @@
               "      <td>13.3</td>\n",
               "      <td>33</td>\n",
               "      <td>8</td>\n",
-              "      <td>128 Flash Storage</td>\n",
+              "      <td>Flash Storage</td>\n",
               "      <td>2</td>\n",
               "      <td>0</td>\n",
               "      <td>1.34</td>\n",
               "      <td>10.776777</td>\n",
               "      <td>1440</td>\n",
               "      <td>900</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -1800,13 +1811,17 @@
               "      <td>15.6</td>\n",
               "      <td>33</td>\n",
               "      <td>8</td>\n",
-              "      <td>256 SSD</td>\n",
+              "      <td>SSD</td>\n",
               "      <td>2</td>\n",
               "      <td>1</td>\n",
               "      <td>1.86</td>\n",
               "      <td>10.329931</td>\n",
               "      <td>1920</td>\n",
               "      <td>1080</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -1815,13 +1830,17 @@
               "      <td>15.4</td>\n",
               "      <td>34</td>\n",
               "      <td>16</td>\n",
-              "      <td>512 SSD</td>\n",
+              "      <td>SSD</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>1.83</td>\n",
               "      <td>11.814476</td>\n",
               "      <td>2880</td>\n",
               "      <td>1800</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -1830,18 +1849,22 @@
               "      <td>13.3</td>\n",
               "      <td>33</td>\n",
               "      <td>8</td>\n",
-              "      <td>256 SSD</td>\n",
+              "      <td>SSD</td>\n",
               "      <td>2</td>\n",
               "      <td>0</td>\n",
               "      <td>1.37</td>\n",
               "      <td>11.473101</td>\n",
               "      <td>2560</td>\n",
               "      <td>1600</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-25afad34-b612-48d7-b1d6-58effb677628')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e74e4f1c-bd6e-4624-a5d2-a789bf01f283')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -1854,8 +1877,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-ab56e0bc-82b5-4c3e-a5cd-d6e8c77ce95e\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ab56e0bc-82b5-4c3e-a5cd-d6e8c77ce95e')\"\n",
+              "    <div id=\"df-791fe608-02ac-4ed5-a504-02ccd00fb350\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-791fe608-02ac-4ed5-a504-02ccd00fb350')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -1912,7 +1935,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-ab56e0bc-82b5-4c3e-a5cd-d6e8c77ce95e button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-791fe608-02ac-4ed5-a504-02ccd00fb350 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -1959,12 +1982,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-25afad34-b612-48d7-b1d6-58effb677628 button.colab-df-convert');\n",
+              "          document.querySelector('#df-e74e4f1c-bd6e-4624-a5d2-a789bf01f283 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-25afad34-b612-48d7-b1d6-58effb677628');\n",
+              "          const element = document.querySelector('#df-e74e4f1c-bd6e-4624-a5d2-a789bf01f283');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1986,7 +2009,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 69
         }
       ]
     },
