--- a/EDA_&_Price_Prediction_of_Laptops.ipynb
+++ b/EDA_&_Price_Prediction_of_Laptops.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4Wz4j20Y43oxlKtNAAhEe",
+      "authorship_tag": "ABX9TyMik4sejsjCeuGV7npH+cks",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2383,11 +2383,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Random Forest predict the accurate value\n"
+        "While prediction of Laptop price Random forest R2_Score is around 88%.\n"
       ],
       "metadata": {
         "id": "N2qpZLD01aHj"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bi_fwmR421Ny"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
