--- a/Bangalor_house_price_prediction.ipynb
+++ b/Bangalor_house_price_prediction.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 514,
+      "execution_count": null,
       "metadata": {
         "id": "5IuLe9h9NI7z"
       },
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "61hOCZomNgyg"
       },
-      "execution_count": 515,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,7 +64,7 @@
         "id": "81XkSnzjNlZP",
         "outputId": "46f3c2be-240b-4fdb-b903-70863ff86d04"
       },
-      "execution_count": 516,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -339,7 +339,7 @@
       "metadata": {
         "id": "mfa8dxDRNnkH"
       },
-      "execution_count": 517,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -354,7 +354,7 @@
         "id": "c1gRbGiFO1AO",
         "outputId": "b347864b-d8c9-454e-ca7f-c80e3c3a7cba"
       },
-      "execution_count": 518,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -384,7 +384,7 @@
       "metadata": {
         "id": "1mxEtqvuVTJn"
       },
-      "execution_count": 519,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -395,7 +395,7 @@
       "metadata": {
         "id": "BHUysPI4vw13"
       },
-      "execution_count": 520,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -406,7 +406,7 @@
       "metadata": {
         "id": "IrDTypnpQTNp"
       },
-      "execution_count": 521,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -421,7 +421,7 @@
         "id": "Dhk2tyn9QaLf",
         "outputId": "36f27ce0-6b37-4140-823f-731176c1384c"
       },
-      "execution_count": 522,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -448,7 +448,7 @@
         "id": "andru2NUQdxQ",
         "outputId": "0ae9e349-40ba-4ad5-cc0d-15223a8e165f"
       },
-      "execution_count": 523,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -706,7 +706,7 @@
         "id": "rujEHiG2RMEP",
         "outputId": "645795a0-09bb-4660-be44-7610c88e458d"
       },
-      "execution_count": 524,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -742,7 +742,7 @@
         "id": "vzXy6qNZRkwH",
         "outputId": "32f5566d-f57e-4ac7-faf2-2a7523283749"
       },
-      "execution_count": 525,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -781,7 +781,7 @@
         "id": "0hmez0OASETP",
         "outputId": "71378c96-dbf7-4b25-819d-16aa60f8fafc"
       },
-      "execution_count": 526,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -834,7 +834,7 @@
         "id": "G0ciWvCxSZT2",
         "outputId": "48af8b55-3833-45df-c245-9822bc5680f8"
       },
-      "execution_count": 527,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,7 +890,7 @@
         "id": "4sYYT4MNTiTN",
         "outputId": "fa350925-6459-4ac8-9d06-20677bf97297"
       },
-      "execution_count": 528,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -915,7 +915,7 @@
         "id": "iCw8vbnsT-uX",
         "outputId": "6c0a1ec3-64bc-4bf2-c904-a87f4315cc90"
       },
-      "execution_count": 529,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1186,7 +1186,7 @@
       "metadata": {
         "id": "dT6TZRBHxe_m"
       },
-      "execution_count": 530,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1197,7 +1197,7 @@
       "metadata": {
         "id": "WQ4h2EM10R-t"
       },
-      "execution_count": 531,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1212,7 +1212,7 @@
       "metadata": {
         "id": "_t3_VMqb0ltD"
       },
-      "execution_count": 532,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1230,7 +1230,7 @@
       "metadata": {
         "id": "g_q8VGJ12uqI"
       },
-      "execution_count": 533,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1245,7 +1245,7 @@
         "id": "L5SC_Kf4w1Wv",
         "outputId": "469e9922-d9fd-4d2d-93a3-218d693fd054"
       },
-      "execution_count": 534,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1282,7 +1282,7 @@
         "id": "I8LZX8dPwcNn",
         "outputId": "478df641-bdfc-44db-9a58-27a071a5b93d"
       },
-      "execution_count": 535,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1321,7 +1321,7 @@
         "id": "ixyw4pXAUDJP",
         "outputId": "63a841bb-c726-4ca9-9cd4-4692a5aef1ef"
       },
-      "execution_count": 536,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1371,7 +1371,7 @@
         "id": "Jf1hXv0IUIPI",
         "outputId": "54e7d667-410d-48bf-af89-4c801d670bbe"
       },
-      "execution_count": 537,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1423,7 +1423,7 @@
         "id": "rIwj4BygUVcv",
         "outputId": "2d648f82-4570-4bda-ed46-5ed01726147e"
       },
-      "execution_count": 538,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1505,7 +1505,7 @@
       "metadata": {
         "id": "lCCUisiiUnEH"
       },
-      "execution_count": 539,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1530,7 +1530,7 @@
         "id": "0-xm9wDsaZQI",
         "outputId": "3252a738-8798-4564-d569-d6c08ec8aa55"
       },
-      "execution_count": 540,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1562,7 +1562,7 @@
         },
         "outputId": "5bb90a5c-6936-46df-83eb-f3b97a78a170"
       },
-      "execution_count": 541,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1587,7 +1587,7 @@
       "metadata": {
         "id": "9WG_-cLvRXRA"
       },
-      "execution_count": 542,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1602,7 +1602,7 @@
         },
         "outputId": "2d23572c-1515-4ec3-b941-99ae6f55507e"
       },
-      "execution_count": 543,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1630,7 +1630,7 @@
         "id": "eCXWSytCfYgZ",
         "outputId": "d3c63340-dcf9-4d13-df53-fedb7fa7743a"
       },
-      "execution_count": 544,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1657,7 +1657,7 @@
         },
         "outputId": "6d194b9f-ecef-4827-d85d-181b6c48c28b"
       },
-      "execution_count": 545,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1685,7 +1685,7 @@
         "id": "AzCh9FWdgfiB",
         "outputId": "f6f4bfac-5ff5-45d4-9c45-76b5a4a5edd2"
       },
-      "execution_count": 546,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1712,7 +1712,7 @@
         "id": "2WJ9tKXZhDji",
         "outputId": "ed227e4c-df1c-4594-e15e-044415d2d075"
       },
-      "execution_count": 547,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1985,7 +1985,7 @@
         "id": "g1dIWYZLi1TA",
         "outputId": "62936ac1-cc52-4bb3-c4fa-683219e0b88c"
       },
-      "execution_count": 548,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2008,7 +2008,7 @@
       "metadata": {
         "id": "5OXCnCFthKGB"
       },
-      "execution_count": 549,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2019,7 +2019,7 @@
       "metadata": {
         "id": "NrjZ09LKhqBi"
       },
-      "execution_count": 550,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2030,7 +2030,7 @@
       "metadata": {
         "id": "0G5YQ37xiTei"
       },
-      "execution_count": 551,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2045,7 +2045,7 @@
         "id": "xJx86Sty3c6m",
         "outputId": "82a5fa92-ea60-45f1-f6b5-7cad570fbf2b"
       },
-      "execution_count": 552,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2080,7 +2080,7 @@
       "metadata": {
         "id": "eVwyXQ5LjhfC"
       },
-      "execution_count": 553,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2096,7 +2096,7 @@
         "id": "CPmEugIwkZiy",
         "outputId": "e3b42589-da0f-43db-d945-b969ce3860da"
       },
-      "execution_count": 554,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2383,7 +2383,7 @@
         "id": "gejUVCp571ae",
         "outputId": "29bdcd1d-1e17-4787-ab27-1ae605e1104e"
       },
-      "execution_count": 555,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2671,7 +2671,7 @@
       "metadata": {
         "id": "g4_qKRkg8S-N"
       },
-      "execution_count": 556,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2687,7 +2687,7 @@
         "id": "xeEfSuYpHHwG",
         "outputId": "2e278a15-b783-4ab3-a622-543d67e9f8a0"
       },
-      "execution_count": 557,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2720,7 +2720,7 @@
       "metadata": {
         "id": "J22O0GrLHHpj"
       },
-      "execution_count": 558,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2735,7 +2735,7 @@
         "id": "iRy7au4tAF6c",
         "outputId": "4b98c119-6b8c-4cf1-a955-16018959ccac"
       },
-      "execution_count": 559,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2774,7 +2774,7 @@
         "id": "DlwfrfdxHr1c",
         "outputId": "4897cfbc-847e-445e-f2df-06c26085453a"
       },
-      "execution_count": 560,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3114,7 +3114,7 @@
         "id": "qByWsffNIDGD",
         "outputId": "f5f4e43d-fea8-4b34-96c8-3d486e52d9b0"
       },
-      "execution_count": 561,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3140,7 +3140,7 @@
         "id": "fCjUZco1IK3D",
         "outputId": "b7b38aee-e8cf-4433-b6bc-7751f62c8e94"
       },
-      "execution_count": 562,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3184,7 +3184,7 @@
         "id": "qzbkP5074BFe",
         "outputId": "edc7a0c0-43aa-4e69-ba68-81969b298cbe"
       },
-      "execution_count": 563,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3530,13 +3530,12 @@
         "            stats = bhk_stats.get(bhk-1)\n",
         "            if stats and stats['count']>5:\n",
         "                exclude_indices = np.append(exclude_indices,bhk_df[bhk_df.price_per_sqft<(stats['mean'])].index.values)\n",
-        "    return df.drop(exclude_indices,axis='index')\n",
-        ""
+        "    return df.drop(exclude_indices,axis='index')\n"
       ],
       "metadata": {
         "id": "RQy2_5Efwqgq"
       },
-      "execution_count": 564,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3547,7 +3546,7 @@
       "metadata": {
         "id": "n7MdXmF4Iaui"
       },
-      "execution_count": 565,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3563,7 +3562,7 @@
         "id": "q75ZdhlWIjpD",
         "outputId": "871f9bc0-54d8-48d6-d62d-14aa36f66876"
       },
-      "execution_count": 566,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3962,7 +3961,7 @@
       "metadata": {
         "id": "wIiFYLVJkc_B"
       },
-      "execution_count": 567,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3983,7 +3982,7 @@
       "metadata": {
         "id": "20zQ-NBfqtNT"
       },
-      "execution_count": 568,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3995,7 +3994,7 @@
       "metadata": {
         "id": "pc7zrNrLpglD"
       },
-      "execution_count": 569,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4010,7 +4009,7 @@
       "metadata": {
         "id": "9qbfYlIoJGOV"
       },
-      "execution_count": 588,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4021,7 +4020,7 @@
       "metadata": {
         "id": "wtyFV45PJClb"
       },
-      "execution_count": 571,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4037,7 +4036,7 @@
         "id": "l0n_rQVnJOea",
         "outputId": "af67080a-021e-4e74-ff2d-90c4441fc96a"
       },
-      "execution_count": 572,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4057,7 +4056,7 @@
       "metadata": {
         "id": "56aBRbw9JRhk"
       },
-      "execution_count": 573,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4068,7 +4067,7 @@
       "metadata": {
         "id": "essdKZnMJTgS"
       },
-      "execution_count": 574,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4087,7 +4086,7 @@
         "id": "XKR6Tc8fJTJq",
         "outputId": "bf2da882-bcb2-4f3a-9421-30e43f1946e6"
       },
-      "execution_count": 589,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4140,7 +4139,7 @@
       "metadata": {
         "id": "2MlpF74bJrED"
       },
-      "execution_count": 590,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4155,7 +4154,7 @@
         "id": "R1DeHGJrJtSy",
         "outputId": "2a23bb12-8c02-4e48-ac12-5ecb35476ca5"
       },
-      "execution_count": 591,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4185,7 +4184,7 @@
         "id": "k7oWb6PP_Jzj",
         "outputId": "0148b141-c7fe-433b-ba4d-383ad2ceda59"
       },
-      "execution_count": 592,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4240,7 +4239,7 @@
         "id": "C_-1galU_Jtk",
         "outputId": "d02f4a11-f2c5-48e9-9d04-d95476f6b870"
       },
-      "execution_count": 593,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4270,7 +4269,7 @@
         "id": "kzenMYMNKN7D",
         "outputId": "0ad24573-0d0c-4fe5-d9ce-2bdd78b11880"
       },
-      "execution_count": 594,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4325,7 +4324,7 @@
         "id": "Yv10VR0sKSv6",
         "outputId": "dc3a780a-4395-4d5f-9a34-0fbabff9eee9"
       },
-      "execution_count": 595,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4353,7 +4352,7 @@
         "id": "-t4bOH5UKVc7",
         "outputId": "c2409a74-b0ab-49f1-c0d1-fbf94d73e7bb"
       },
-      "execution_count": 596,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
