--- a/eval_assn1_22_23_S.ipynb
+++ b/eval_assn1_22_23_S.ipynb
@@ -653,7 +653,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
+        "'''import numpy as np\n",
         "\n",
         "# You are not allowed to use any ML libraries e.g. sklearn, scipy, keras, tensorflow etc\n",
         "\n",
@@ -695,11 +695,39 @@
         "        w_proj = np.linalg.lstsq(x_proj, y_trn, rcond=None)[0]\n",
         "        w[ind] = w_proj\n",
         "\n",
-        "    return w\t\t# Return the trained model\n",
+        "    return w\t\t# Return the trained model'''\n",
         "\n"
       ],
       "metadata": {
-        "id": "29IGy6c_dKds"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 226
+        },
+        "id": "29IGy6c_dKds",
+        "outputId": "1326d9d0-8cd1-4770-d997-731f12220785"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'import numpy as np\\n\\n# You are not allowed to use any ML libraries e.g. sklearn, scipy, keras, tensorflow etc\\n\\n# SUBMIT YOUR CODE AS A SINGLE PYTHON (.PY) FILE INSIDE A ZIP ARCHIVE\\n# THE NAME OF THE PYTHON FILE MUST BE submit.py\\n# DO NOT INCLUDE OTHER PACKAGES LIKE SKLEARN, SCIPY, KERAS,TENSORFLOW ETC IN YOUR CODE\\n# THE USE OF ANY MACHINE LEARNING LIBRARIES WILL RESULT IN A STRAIGHT ZERO\\n\\n# DO NOT CHANGE THE NAME OF THE METHOD my_fit BELOW\\n# THESE WILL BE INVOKED BY THE EVALUATION SCRIPT. CHANGING THESE NAMES WILL CAUSE EVALUATION FAILURE\\n\\n# You may define any new functions, variables, classes here\\n# For example, functions to calculate next coordinate or step length\\n\\ndef HT( v, k ):\\n    t = np.zeros_like( v )\\n    if k < 1:\\n        return t\\n    else:\\n        ind = np.argsort( abs( v ) )[ -k: ]\\n        t[ ind ] = v[ ind ]\\n    return t\\n################################\\n# Non Editable Region Starting #\\n################################\\ndef my_fit( X_trn, y_trn ):\\n    w = np.linalg.lstsq(X_trn, y_trn, rcond=None)[0]\\n    n = X_trn.shape[0]\\n    learning_rate = 0.70324444\\n    max_iter = 15\\n    model = np.linalg.lstsq(X_trn, y_trn, rcond=None)[0]\\n    for epoch in range(max_iter):\\n        for i in range(1600):\\n            gradient = (np.dot(w, X_trn[i])- y_trn[i])*X_trn[i]/len(X_trn[i])\\n            w = w - learning_rate*gradient \\n        w = HT(w,512);\\n        ind = np.nonzero(w)[0]\\n        x_proj = X_trn[:, ind]\\n        w_proj = np.linalg.lstsq(x_proj, y_trn, rcond=None)[0]\\n        w[ind] = w_proj\\n    \\n    return w\\t\\t# Return the trained model'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "j3QooNAPdcAs"
       },
       "execution_count": null,
       "outputs": []
